<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arbotix_python</name>
  <version>2.0.0</version>
  <description>
    Bindings and low-level controllers for ArbotiX-powered robots.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix_python</url>

  <build_depend>ament_python</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>arbotix_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
